opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
homepage: "https://github.com/andersfugmann/ppx_deriving-protocol"
dev-repo: "git+https://github.com/andersfugmann/ppx_deriving-protocol"
bug-reports: "https://github.com/andersfugmann/ppx_deriving-protocol/issues"
build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]
version: "0.8"
depends: [
  "yojson"
  "xml-light"
  "base"
  "ppx_core" {build}
  "ppx_type_conv" {build}
  "ppx_driver" {build}
  "jbuilder" {build}
]
