opam-version: "2.0"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
homepage: "https://github.com/andersfugmann/ppx_protocol_conv"
dev-repo: "git+https://github.com/andersfugmann/ppx_protocol_conv"
bug-reports: "https://github.com/andersfugmann/ppx_protocol_conv/issues"
version: "5.0.0"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04"}
  "base" {< "v0.13"}
  "dune" {build & >= "1.2"}
  "ppxlib" {>= "0.3.0"}
  "ppx_sexp_conv" {with-test & < "v0.13"}
  "sexplib" {with-test & < "v0.13"}
  "alcotest" {with-test & >= "0.8.0"}
]
synopsis:
  "Ppx for generating serialisation and de-serialisation functions of ocaml types"
description: """
Ppx_protocol_conv generates code to serialize and de-serialize
types. The ppx itself does not contain any protocol specific code,
but relies on 'drivers' that defines serialisation and
de-serialisation of basic types and structures.

Pre-defined drivers are available in separate packages:
ppx_protocol_conv_json (Yojson.Safe.json)
ppx_protocol_conv_jsonm (Ezjson.value)
ppx_protocol_conv_msgpack (Msgpck.t)
ppx_protocol_conv_xml-light (Xml.xml)
ppx_protocol_conv_yaml (Yaml.value)"""
