opam-version: "2.0"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
homepage: "https://github.com/andersfugmann/ppx_protocol_conv"
dev-repo: "git+https://github.com/andersfugmann/ppx_protocol_conv"
bug-reports: "https://github.com/andersfugmann/ppx_protocol_conv/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "ppx_protocol_conv" {= "4.0.0"}
  "yojson" {>= "1.5.0" & < "2.0.0"}
  "dune" {build}
  "ppx_sexp_conv" {with-test & < "v0.12"}
  "ppx_expect" {< "v0.12"}
  "ppx_inline_test" {< "v0.12"}
  "sexplib" {with-test & < "v0.12"}
  "ounit" {with-test}
]
synopsis: "Json driver for Ppx_protocol_conv"
description: """
This package provides a driver for json (Yojson.Safe.json)
serialization and de-serialization using the yojson library"""
