opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
homepage: "https://github.com/andersfugmann/ppx-deriving-protocol"
dev-repo: "git+https://github.com/andersfugmann/ppx-deriving-protocol"
bug-reports: "https://github.com/andersfugmann/ppx-deriving-protocol/issues"
build: ["jbuilder" "build" "-p" name "-j" jobs]
version: "0.10.0"
depends: [
  "ppx_protocol_conv" { > "0.10.0" }
  "base"
  "msgpck"
  "jbuilder" {build}
]
available: [ ocaml-version >= "4.04.0" ]
