opam-version: "2.0"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
license: "BSD-3-Clause"
homepage: "https://github.com/andersfugmann/ppx_protocol_conv"
dev-repo: "git+https://github.com/andersfugmann/ppx_protocol_conv"
bug-reports: "https://github.com/andersfugmann/ppx_protocol_conv/issues"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "ppx_protocol_conv" {= version}
  "xml-light"
  "dune" {>= "1.2"}
  "ppx_sexp_conv" {with-test}
  "sexplib" {with-test}
  "alcotest" {with-test & >= "0.8.0"}
]
synopsis: "Xml driver for Ppx_protocol_conv"
description: """
This package provides a driver for xml (Xml.t) serialization and
de-serialization using the xml-light library"""
