opam-version: "1.2"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: "Anders Fugmann"
homepage: "https://github.com/andersfugmann/ppx-deriving-protocol"
dev-repo: "git+https://github.com/andersfugmann/ppx-deriving-protocol"
bug-reports: "https://github.com/andersfugmann/ppx-deriving-protocol/issues"
build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]
version: "0.10.0"
depends: [
  "ppx_protocol_conv" { > "0.10.0" }
  "base"
  "yojson"
  "jbuilder" {build}
]
available: [ ocaml-version >= "4.03.0" ]
