(library
 (name protocol_conv_json)
 (public_name ppx_protocol_conv_json)
 (private_modules test_expect)
 (libraries ppx_protocol_conv ppx_protocol_conv.runtime ppx_protocol_conv.driver yojson)
 (synopsis "yojson (de)serialization driver for ppx_protocol_conv")
 (inline_tests)
 (preprocess (pps ppx_protocol_conv ppx_inline_test ppx_expect))
)
