(library
 (name protocol_conv_json)
 (public_name ppx_protocol_conv_json)
 (modules (:standard \ test_expect))
 (libraries ppx_protocol_conv.runtime ppx_protocol_conv.driver yojson)
 (synopsis "yojson (de)serialization driver for ppx_protocol_conv")
 (preprocess (pps ppx_protocol_conv))
)

(library
 (name protocol_conv_json_inline_tests)
 (modules test_expect)
 (libraries protocol_conv_json ppx_protocol_conv.driver)
 (preprocess (pps ppx_protocol_conv ppx_expect))
 (inline_tests)
)
