(executable
 (name       unittest)
 (libraries  test ppx_protocol_conv)
 (preprocess (pps ppx_sexp_conv))
)

(rule
 (targets test.out)
 (deps    unittest.exe)
 (action  (run %{deps} -runner sequential))
)

(alias
 (name runtest)
 (package ppx_protocol_conv)
 (action (diff tests.expected test.out))
)
