(executable
 (name       unittest)
 (libraries  test ppx_protocol_conv_json)
 (preprocess (pps ppx_protocol_conv ppx_sexp_conv ppx_expect))
)

(rule
 (targets unittest.output)
 (deps    unittest.exe)
 (action  (run %{deps}))
)

(alias
 (name runtest)
 (package ppx_protocol_conv_json)
 (action (diff unittest.expected unittest.output))
)
