(executable
 (name       unittest)
 (modules    Unittest)
 (libraries  test protocol_conv_msgpack)
)

(executable
 (name       test_types)
 (modules    test_types)
 (libraries  protocol_conv_msgpack)
 (preprocess (pps ppx_protocol_conv))
)


(alias
 (name    runtest)
 (package ppx_protocol_conv_msgpack)
 (action  (run %{exe:unittest.exe}))
)

(alias
 (name    runtest)
 (package ppx_protocol_conv_msgpack)
 (action  (run %{exe:test_types.exe}))
)
