(executable
 (name       unittest)
 (libraries  test protocol_conv_msgpack)
 (preprocess (pps ppx_protocol_conv))
)

(rule
 (targets test.out)
 (deps    unittest.exe)
 (action  (run %{deps} -runner sequential))
)

(alias
 (name runtest)
 (package ppx_protocol_conv_msgpack)
 (action (diff tests.expected test.out))
)
